Improve notification performance